@@ -17,17 +17,24 @@ package com.google.devtools.treeshaker;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.io.Files;
 import com.google.common.io.Resources;
 import com.google.devtools.j2objc.util.SourceVersion;
 import com.google.devtools.j2objc.util.Version;
+import com.google.protobuf.ExtensionRegistry;
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 
@@ -64,10 +71,19 @@ class Options {
   private boolean stripReflection = false;
   private File treeShakerRoots;
   private File outputFile = new File("tree-shaker-report.txt");
+  private LibraryInfo summary;
+  private String summaryOutputFile;
+  private List<LibraryInfo> summaries = Lists.newArrayList();
 
   // The default source version number if not passed with -source is determined from the system
   // properties of the running java version after parsing the argument list.
   private SourceVersion sourceVersion = null;
+
+  // Flags that are directly forwarded to the javac parser, to allow tree_shaker to
+  // include JRE sources in its analysis. For a description of each flag, run "javac -help".
+  private static final ImmutableSet<String> PLATFORM_MODULE_SYSTEM_OPTIONS =
+      ImmutableSet.of("--patch-module", "--system", "--add-reads");
+  private final List<String> platformModuleSystemOptions = new ArrayList<>();
 
   public List<String> getSourceFiles() {
     return sourceFiles;
@@ -125,6 +141,34 @@ class Options {
     return outputFile;
   }
 
+  public LibraryInfo getSummary() {
+    return summary;
+  }
+
+  public void setSummary(LibraryInfo summary) {
+    this.summary = summary;
+  }
+
+  public List<LibraryInfo> getSummaries() {
+    return summaries;
+  }
+
+  public void setSummaries(List<LibraryInfo> summaries) {
+    this.summaries = summaries;
+  }
+
+  public void addSummary(LibraryInfo summary) {
+    this.summaries.add(summary);
+  }
+
+  public String getSummaryOutputFile() {
+    return summaryOutputFile;
+  }
+
+  public void setSummaryOutputFile(String summaryOutputFile) {
+    this.summaryOutputFile = summaryOutputFile;
+  }
+
   private void addManifest(String manifestFile) throws IOException {
     BufferedReader in = new BufferedReader(new FileReader(new File(manifestFile)));
     try {
@@ -154,6 +198,14 @@ class Options {
     sourceVersion = sv;
   }
 
+  public void addPlatformModuleSystemOptions(String... flags) {
+    Collections.addAll(platformModuleSystemOptions, flags);
+  }
+
+  public List<String> getPlatformModuleSystemOptions() {
+    return platformModuleSystemOptions;
+  }
+
   public static void usage(String invalidUseMsg) {
     System.err.println("tree_shaker: " + invalidUseMsg);
     System.err.println(usageMessage);
@@ -174,15 +226,17 @@ class Options {
   public static Options parse(String[] args) throws IOException {
     Options options = new Options();
     processArgs(args, options);
-
-    if (options.treeShakerRoots == null) {
-      usage("--tree_shaker_roots not set");
-    }
-    if (options.sourceFiles.isEmpty()) {
-      usage("no source files");
-    }
-
     return options;
+  }
+
+  private static List<LibraryInfo> readSummaries(List<String> summaries) throws IOException {
+    List<LibraryInfo> libraryInfos = Lists.newArrayList();
+    for (String summary : summaries) {
+      try (InputStream in = new FileInputStream(summary)) {
+        libraryInfos.add(LibraryInfo.parseFrom(in, ExtensionRegistry.getEmptyRegistry()));
+      }
+    }
+    return libraryInfos;
   }
 
   private static void processArgsFile(String filename, Options options) throws IOException {
@@ -213,6 +267,19 @@ class Options {
           usage("-classpath requires an argument");
         }
         options.classpath = args[nArg];
+      } else if (arg.equals("-summaries")) {
+        if (++nArg == args.length) {
+          usage("--summaries requires an argument");
+        }
+
+        options.setSummaries(readSummaries(ImmutableList.copyOf(args[nArg].split(":"))));
+      } else if (arg.equals("-summary")) {
+        if (++nArg == args.length) {
+          usage("-summary requires an argument");
+        }
+        options.setSummary(
+            LibraryInfo.parseFrom(
+                Files.toByteArray(new File(args[nArg])), ExtensionRegistry.getEmptyRegistry()));
       } else if (arg.equals("--sourcefilelist") || arg.equals("-s")) {
         if (++nArg == args.length) {
           usage("--sourcefilelist requires an argument");
@@ -228,6 +295,11 @@ class Options {
           usage("--output-file");
         }
         options.outputFile = new File(args[nArg]);
+      } else if (arg.equals("--output-summary")) {
+        if (++nArg == args.length) {
+          usage("--output-summary");
+        }
+        options.summaryOutputFile = args[nArg];
       } else if (arg.startsWith(XBOOTCLASSPATH)) {
         // TODO(malvania): Enable the bootclasspath option when we have a class file AST
         //                 parser that can use class jars.
@@ -259,6 +331,12 @@ class Options {
       } else if (arg.equals("--strip-reflection")) {
         // strips the reflection support
         options.stripReflection = true;
+      } else if (PLATFORM_MODULE_SYSTEM_OPTIONS.contains(arg)) {
+        String option = arg;
+        if (++nArg == args.length) {
+          usage(option + " requires an argument");
+        }
+        options.addPlatformModuleSystemOptions(option, args[nArg]);
       } else if (arg.startsWith("-h") || arg.equals("--help")) {
         help(false);
       } else if (arg.startsWith("-")) {
